--- a/notificationapp/src/main/resources/application.yml
+++ b/notificationapp/src/main/resources/application.yml
@@ -1,5 +1,10 @@
 spring:
   application:
     name: notificationapp
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:9090/realms/proselyte
 server:
   port: 8092
