--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
+# Ignore Gradle project-specific cache directory
 .gradle
+/buildSrc/.gradle/
+
+# Ignore Gradle build output directory
+build
+out
 build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
@@ -15,6 +21,7 @@ build/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+*.idea
 
 ### Eclipse ###
 .apt_generated
@@ -40,3 +47,29 @@ bin/
 
 ### Mac OS ###
 .DS_Store
+
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+!gradle-wrapper.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
