--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   postgres:
-    image: postgres:15
+    image: docker.io/postgres:15.8-alpine
     container_name: keycloak_postgres
     environment:
       POSTGRES_DB: keycloak
